--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -71,7 +71,7 @@
         <!--1--->
         <div class="accordion-content" dir="rtl">
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question">سياسة الخصوصية</h4>
             </div>
             <div class="item-content">
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question">أنواع المعلومات التي نقوم بجمعها </h4>
             </div>
             <div class="item-content">
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question">أغراض جمع، ومعالجة، وكشف المعلومات <br>
 				  الجمع والاستخدام
                 </h4>
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question">معالجة وكشف المعلومات</h4>
             </div>
             <div class="item-content">
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question"> الموافقة </h4>
             </div>
             <div class="item-content">
@@ -123,7 +123,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question"> الوصول لمعلومات التعريف الشخصية </h4>
             </div>
             <div class="item-content">
@@ -134,7 +134,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question"> التقنيات المباشرة عبر الإنترنت </h4>
             </div>
             <div class="item-content">
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question"> وضع الروابط لمواقع أخرى </h4>
             </div>
             <div class="item-content">
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question"> المستخدمين القاصرين </h4>
             </div>
             <div class="item-content">
@@ -167,7 +167,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="item-header">
+            <div class="item-header" style="background-position: 0% 55%;">
               <h4 class="item-question"> الدقة والخصوصية </h4>
             </div>
             <div class="item-content">
