--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -70,7 +70,7 @@
 
 
   <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question"> شروط الإستخدام 
 </h4>
     </div>
@@ -81,7 +81,7 @@
     </div>
   </div>
   <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">حقوق النشر</h4>
     </div>
     <div class="item-content">
@@ -90,7 +90,7 @@
     </div>
   </div>
   <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question"> العلامات التجارية </h4>
     </div>
     <div class="item-content">
@@ -98,7 +98,7 @@
     </div>
   </div>
   <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">الخصوصية</h4>
     </div>
     <div class="item-content">
@@ -110,7 +110,7 @@
     </div>
   </div>
   <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">التسجيل</h4>
     </div>
     <div class="item-content">
@@ -121,7 +121,7 @@
     </div>
   </div>
   <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">قواعد السلوك</h4>
     </div>
     <div class="item-content">
@@ -151,7 +151,7 @@
 	
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question"> الحجز</h4>
     </div>
     <div class="item-content">
@@ -166,7 +166,7 @@
 	
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">الروابط</h4>
     </div>
     <div class="item-content">
@@ -177,7 +177,7 @@
 	
 	
 		  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question"> استخدام "سجل التتبع أو سجل التصفح" أو أي من تكنلوجيات التتبع الأخرى </h4>
     </div>
     <div class="item-content">
@@ -188,7 +188,7 @@
 	
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">دقة المعلومات</h4>
     </div>
     <div class="item-content">
@@ -200,7 +200,7 @@
 	
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question"> التنازلات </h4>
     </div>
     <div class="item-content">
@@ -213,7 +213,7 @@
 	
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">النزاعات</h4>
     </div>
     <div class="item-content">
@@ -225,7 +225,7 @@
 	
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">حدود المسؤولية </h4>
     </div>
     <div class="item-content">
@@ -243,7 +243,7 @@
 	
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question"> التعويض</h4>
     </div>
     <div class="item-content">
@@ -255,7 +255,7 @@
   </div>
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">إمكانية اتاحة الموقع</h4>
     </div>
     <div class="item-content">
@@ -265,7 +265,7 @@
   </div>
 	
 	  <div class="accordion-item">
-    <div class="item-header">
+    <div class="item-header" style="background-position: 0% 55%;">
       <h4 class="item-question">عدم سريان الاتفاقية في بعض المناطق </h4>
     </div>
     <div class="item-content">
