--- a/delivery-booking-summery.html
+++ b/delivery-booking-summery.html
@@ -73,8 +73,8 @@
 							<div class="row">
 								<div class="col-md-12 col-sm-12 col-12">
 									<div class="summery-location-block location_iconbg">
-										<h5>Customer Location</h5>
-										<p><span>Prince Fahad Ibn Ibrahim Al Saud St</span><br>Al Malaz</p>
+										<h5>Branch</h5>
+										<p><span>Kwuit Circle</span><br>Prince Fahad Al Saud St.</p>
 									</div>
 								</div>
 							
@@ -91,7 +91,7 @@
 								<div class="col-md-6 col-sm-6 col-12">
 									<div class="summery-location-block">
 										<h5>Booking Method</h5>
-										<p>Delivery</p>
+										<p>Reserve</p>
 									</div>
 								</div>
 								
