--- a/services.html
+++ b/services.html
@@ -97,7 +97,7 @@
 						<div class="col-lg-8 col-md-9 col-sm-8 col-12">
 							<div class="content_box">
 								<h4 class="title_red">Delivery option</h4>
-								<p>Get special deals with our Loyalty program. You can earn points with each rental, and once your points gather up, you can receive special offers and deals from our loyalty services. In this way you can save money and get benefits with every penny you spend.</p>
+								<p>Door-to-door car shipping is the most convenient method of auto transport. You need to complete the booking process for the vehicle to be picked up and dropped off. We will deliver your booked vehicle as close to this desired address as safely and legally possible.</p>
 								<a href="#" class="button">Our fleet</a>
 
 							</div>
@@ -110,7 +110,7 @@
 						<div class="col-lg-8 col-md-9 col-sm-8 col-12 order-md-1 order-sm-1 order-2">
 							<div class="content_box">
 								<h4 class="title_red">Long term rental</h4>
-								<p>NLCO accepts the following credit card payment methods: Visa or MasterCard. This way you can be ensured of your payment security and be in control of your accounts, check your transactions and get periodic reportings from your banking service.</p>
+								<p>A long-term rental property is often rented out to a long-term tenant for a long period of time. This can range from 30 days to 6 months (or more) depending on the desire of the customers.</p>
 								<a href="#" class="button">Our fleet</a>
 
 							</div>
